--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
+data.db
+global.js
+old.js
+node_modules/
 
 # Folder config file
 Desktop.ini
